microsoft-azure-sb/3.4/modules/ROOT/pages/azure-service-bus-connector-reference.adoc
= Azure Service Bus Connector 3.4 Reference - Mule 4

Anypoint Connector for Azure Service Bus (Azure Service Bus Connector) enables message integration with Azure Service Bus on the cloud.

---
[[config]]
== Configurations


=== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config_sas-connection, Shared Access Signature>>
* <<config_aad-connection, Azure Active Directory>>
 | The connection types to provide to this configuration. | | x
| Send Correlation Strategy a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Whether to specify a correlation ID when publishing messages. This applies both for custom correlation IDs specified at the operation level and for default correlation IDs taken from the current event. |  AUTO |
| Zone Id a| String |  Zone ID property is used to identify the rules used to convert between an Instant and LocalDateTime. If the Zone ID equals `Z`, UTC is used. If the Zone ID is not specified, the system default Zone ID is used. |  |
| Expiration Policy a| <<ExpirationPolicy>> | Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[config_sas-connection]]
===== Shared Access Signature

The SAS connection type uses the SAS Key Name and the SAS Key to generate a token, which is used by the Azure Service Bus SDK to establish the connection to the Service Bus instance.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Service namespace a| String |  The namespace contains the resources to which the connector can establish a connection. |  | x
| Shared access key name a| String |  Name of the Shared Access key |  | x
| Shared access key a| String |  Shared Access key |  | x
| Security a| TLS |  TLS enabled by default, using the default JVM certificates to secure communication. |  | x
| Response Timeout a| Number |  Amount of time to wait for the operation to execute before throwing an error. This value is qualified by the Response Timeout TimeUnit. |  30 |
| Response Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout value |  SECONDS |
| Minimum Retry Backoff a| Number | The minimum backoff interval for the retry |  0 |
| Minimum Retry Backoff Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the Minimum Retry Backoff value |  SECONDS |
| Maximum Retry Backoff a| Number |  The maximum backoff interval for the retry |  30 |
| Maximum Retry Backoff Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the Maximum Retry Backoff value |  SECONDS |
| Retries a| Number |  The maximum amount of retries that the connector will attempt |  10 |
| Increased wait on server busy a| Number | Ammount of additional time to wait whenever there's a ServerBusyException |  0 |
| Increased wait on server busy Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the Increased wait on server busy value |  SECONDS |
| Cache Producers | Boolean |  When checked the producer for a given destination is cached | `true` |
| Reconnection a| <<Reconnection>> |  Configures a reconnection strategy to use when a connector operation fails to connect to an external server. |  |
|===

[[config_aad-connection]]
===== Azure Active Directory

The Azure Active Directory (Azure AD) connection type provides role-based access control (RBAC), in which users can use https://docs.microsoft.com/azure/service-bus-messaging/authenticate-application[Azure AD app registrations] to generate a *Client Id* and a *Client Secret* for authentication.


====== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Service namespace a| String |  Namespace that contains resources to which the connector establishes a connection. |  | x
| Azure endpoint a| String |  Constructs the complete URL that the connector uses to establish a connection. |  servicebus.windows.net | 
| Tenant Id a| String |  Tenant in which the app registration and the Azure Service Bus instance are running. |  | x
| Client Id a| String |  ID of the app registration. |  | x
| Client Secret a| String |  Secret key of the app registration. |  | x
| Security a| TLS |  TLS enabled by default, using the default JVM certificates to secure communication. |  | x
| Response Timeout a| Number |  How long to wait for an operation to execute before throwing an error.  |  30 |
| Response Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  SECONDS |
| Minimum Retry Backoff a| Number | Minimum backoff interval for the retry. |  0 |
| Minimum Retry Backoff Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Minimum Retry Backoff* field. |  SECONDS |
| Maximum Retry Backoff a| Number |  Maximum backoff interval for the retry. |  30 |
| Maximum Retry Backoff Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Maximum Retry Backoff* field. |  SECONDS |
| Retries a| Number |  Maximum number of retries that the connector attempts. |  10 |
| Increased wait on server busy a| Number | Ammount of additional time to wait whenever there's a ServerBusyException |  0 |
| Increased wait on server busy Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the Increased wait on server busy value |  SECONDS |
| Cache Producers | Boolean |  When checked the producer for a given destination is cached | `true` |
| Reconnection a| <<Reconnection>> |  Configures a reconnection strategy to use when a connector operation fails to connect to an external server. |  |
|===

== List of Operations
* <<abandonMessage>>
* <<completeMessage>>
* <<receive>>
* <<receiveBatch>>
* <<send>>
* <<sendMessageBatch>>

== List of Sources
* <<message-listener>>


== Operations

[[abandonMessage]]
=== Abandon
`<azure-service-bus-messaging:abandon-message>`

Abandon message stored in the current receiver (This is equivalent to a NACK operation). This operation can be used only from inside a flow that also includes a *Message Listener Source* operation.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Lock Token a| String |  Lock Token from the message to abandon. This represents a UUID for a message. |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws

* AZURE-SERVICE-BUS-MESSAGING:CONNECTIVITY
* AZURE-SERVICE-BUS-MESSAGING:OPERATION_TIMEOUT
* AZURE-SERVICE-BUS-MESSAGING:RETRY_EXHAUSTED
* AZURE-SERVICE-BUS-MESSAGING:TOKEN_NOT_FOUND
* AZURE-SERVICE-BUS-MESSAGING:ANY


[[completeMessage]]
=== Complete
`<azure-service-bus-messaging:complete-message>`

This operation completes a message received from within a flow with a Message Listener operation in the current source. This is the same as an acknowledge.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Lock Token a| String | Lock Token from the message to ACK. This represents a UUID for a message. |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws

* AZURE-SERVICE-BUS-MESSAGING:TOKEN_EXPIRED
* AZURE-SERVICE-BUS-MESSAGING:OPERATION_TIMEOUT
* AZURE-SERVICE-BUS-MESSAGING:ANY
* AZURE-SERVICE-BUS-MESSAGING:CONNECTIVITY
* AZURE-SERVICE-BUS-MESSAGING:RETRY_EXHAUSTED
* AZURE-SERVICE-BUS-MESSAGING:TOKEN_NOT_FOUND


[[receive]]
=== Receive
`<azure-service-bus-messaging:receive>`

This operation receives a message from a specific queue or subscription. In this version of the connector, only Immediate Receive Mode (`RECEIVEANDDELETE`) is supported.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Output Mime Type a| String | MIME type of the payload that this operation outputs |  |
| Output Encoding a| String |  Encoding of the payload that this operation outputs |  |
| Destination Name a| String | Name of the destination from which messages are received |  | x
| Subscription Name a| String | Name of the subscription from which messages are received |  NONE |
| Target Variable a| String | Name of a variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | Retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<AttributesWithoutLockToken>>
|===

=== For Configurations
* <<config>>

==== Throws

* AZURE-SERVICE-BUS-MESSAGING:OPERATION_TIMEOUT
* AZURE-SERVICE-BUS-MESSAGING:INVALID_SIGNATURE
* AZURE-SERVICE-BUS-MESSAGING:NOT_ENOUGH_PERMITS
* AZURE-SERVICE-BUS-MESSAGING:CONNECTIVITY
* AZURE-SERVICE-BUS-MESSAGING:DESTINATION_NOT_FOUND
* AZURE-SERVICE-BUS-MESSAGING:RETRY_EXHAUSTED
* AZURE-SERVICE-BUS-MESSAGING:ANY


[[receiveBatch]]
=== Receive Batch
`<azure-service-bus-messaging:receive-batch>`

This operation attempts to receive up to maxMessageCount messages from a specific queue or subscription. In this version of the connector, only Immediate Receive Mode (`RECEIVEANDDELETE`) is supported.

Due to the design of the Azure-provided SDK that Azure Service Bus Connector uses, the actual number of messages received may be fewer or more than the maxMessageCount specified. This behavior occurs because the Azure-provided SDK treats maxMessageCount as an approximation rather than a strict limit. Additionally, a null value may be returned if the operation exceeds the specified timeout or if there are no more messages to receive.

IMPORTANT: To ensure that all available messages are received, you might need to call this operation multiple times.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Max Message Count a| Number | Maximum number of messages that can be received |  | x
| Destination Name a| String | Name of the destination from which messages are received |  | x
| Subscription Name a| String | Name of the subscription from which messages are received |  NONE |
| Target Variable a| String | Name of a variable in which to store the operation's output |  |
| Target Value a| String | An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of [Binary] payload and [<<AttributesWithoutLockToken>>] attributes
|===

=== For Configurations
* <<config>>

==== Throws

* AZURE-SERVICE-BUS-MESSAGING:OPERATION_TIMEOUT
* AZURE-SERVICE-BUS-MESSAGING:INVALID_SIGNATURE
* AZURE-SERVICE-BUS-MESSAGING:NOT_ENOUGH_PERMITS
* AZURE-SERVICE-BUS-MESSAGING:CONNECTIVITY
* AZURE-SERVICE-BUS-MESSAGING:DESTINATION_NOT_FOUND
* AZURE-SERVICE-BUS-MESSAGING:RETRY_EXHAUSTED
* AZURE-SERVICE-BUS-MESSAGING:ANY


[[send]]
=== Send
`<azure-service-bus-messaging:send>`

This operation sends a message to a Queue or Topic.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Destination Name a| String | Destination name to which to send the message |  | x
| Body a| Binary |  Body of this message |  #[payload] |
| Message Id a| String |  Message identifier is an application-defined value that uniquely identifies the message and its payload |  |
| Send Correlation Strategy a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Lists the possible strategies to determine the correlation ID to send on an outbound operation that supports correlation |  |
| Correlation Id a| String |  Allows an application to specify a context for the message for the purposes of correlation |  |
| Session Id a| String | Session identifier for a session-aware entity |  |
| Reply To a| String |  Name of the destination to which to send the message reply |  |
| Reply To Session Id a| String |  The ID of the Session associated with the message. |  |
| Label a| String |  Enables the application to indicate the purpose of the message to the receiver |  |
| Partition Key a| String |  For partitioned entities, setting this value enables assigning related messages to the same internal partition, so that the submission sequence order is correctly recorded. |  |
| Time To Live a| Number | Relative duration, in milliseconds, after which the message expires, starting from the instant the message is accepted and stored by the broker |  |
| Time To Live Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the Write Concern Timeout |  SECONDS |
| Scheduled Enqueue Time Utc a| DateTime |  Defines the UTC instant at which the message is logically enqueued, sequenced, and therefore made available for retrieval |  |
| Properties a| Object |  Map of user application properties set on the message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | Retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* AZURE-SERVICE-BUS-MESSAGING:PAYLOAD_SIZE_EXCEEDED
* AZURE-SERVICE-BUS-MESSAGING:OPERATION_TIMEOUT
* AZURE-SERVICE-BUS-MESSAGING:INVALID_SIGNATURE
* AZURE-SERVICE-BUS-MESSAGING:NOT_ENOUGH_PERMITS
* AZURE-SERVICE-BUS-MESSAGING:CONNECTIVITY
* AZURE-SERVICE-BUS-MESSAGING:DESTINATION_NOT_FOUND
* AZURE-SERVICE-BUS-MESSAGING:RETRY_EXHAUSTED
* AZURE-SERVICE-BUS-MESSAGING:INVALID_PARAMS
* AZURE-SERVICE-BUS-MESSAGING:ANY


[[sendMessageBatch]]
=== Send batch of messages
`<azure-service-bus-messaging:send-message-batch>`

This operation sends a list of messages to a queue or topic.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Destination Name a| String | Destination name to which to send the message |  | x
| Messages a| Array of Any |  Messages to send |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* AZURE-SERVICE-BUS-MESSAGING:PAYLOAD_SIZE_EXCEEDED
* AZURE-SERVICE-BUS-MESSAGING:OPERATION_TIMEOUT
* AZURE-SERVICE-BUS-MESSAGING:INVALID_SIGNATURE
* AZURE-SERVICE-BUS-MESSAGING:ANY
* AZURE-SERVICE-BUS-MESSAGING:NOT_ENOUGH_PERMITS
* AZURE-SERVICE-BUS-MESSAGING:CONNECTIVITY
* AZURE-SERVICE-BUS-MESSAGING:DESTINATION_NOT_FOUND
* AZURE-SERVICE-BUS-MESSAGING:RETRY_EXHAUSTED
* AZURE-SERVICE-BUS-MESSAGING:INVALID_PARAMS


== Sources

[[message-listener]]
=== Message Listener
`<azure-service-bus-messaging:message-listener>`

This operation receives messages from a specific queue or subscription.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Acknowledgment mode a| Enumeration, one of:

** AUTO
** MANUAL
** IMMEDIATE | Specifies the way to acknowledge received messages. AUTO and MANUAL uses the PeekLock mode. IMMEDIATE uses the ReceiveAndDelete mode. |  | x
| Prefetch Count a| Number |  When Prefetch is enabled, the receiver quietly acquires more messages, up to the PrefetchCount limit, beyond what the application initially requested. Setting this value to zero (`0`) disables prefetching. |  0 |
| Number Of Consumers a| Number | Number of concurrent consumers to use to receive messages |  |
|Buffered Mode | Boolean | Buffered is the default mode. Consumers send the message to the flow and immediately receive the next message. If Buffered Mode is disabled, the consumers do not receive the next message until the current message exits the flow. | true |
| Output Mime Type a| String | MIME type of the payload that this operation outputs |  |
| Output Encoding a| String |  Encoding of the payload that this operation outputs |  |
| Primary Node Only a| Boolean |  Whether this source should be executed only on the primary node when running in a cluster |  true |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Destination Name a| String | Name of the destination from which messages are received |  | x
| Subscription Name a| String | Name of the subscription from which messages are received |  NONE |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | Retry strategy in case of connectivity errors |  |
| Body a| Binary |  Body of the message |  #[payload] |
| Message Id a| String |  The message identifier is an application-defined value that uniquely identifies the message and its payload. |  |
| Send Correlation Strategy a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  |  AUTO |
| Correlation Id a| String |  Allows an application to specify a context for the message for the purposes of correlation |  |
| Session Id a| String | Session identifier for a session-aware entity |  |
| Reply To a| String | Standard way to express a reply path to the receiver of the message |  |
| Reply To Session Id a| String | Session identifier for a session-aware entity |  |
| Label a| String |  Enables the application to indicate the purpose of the message to the receiver |  |
| Partition Key a| String |  For partitioned entities, setting this value enables assigning related messages to the same internal partition, so that the submission sequence order is correctly recorded. |  |
| Time To Live a| Number |  This value is the relative duration after which the message expires, starting from the instant the message is accepted and stored by the broker |  |
| Time To Live Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the Write Concern Timeout |  SECONDS |
| Scheduled Enqueue Time Utc a| DateTime |  Defines the UTC instant at which the message is logically enqueued, sequenced, and made available for retrieval |  |
| Properties a| Object |  Map of user application properties set on the message |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<AzureMessageAttributes>>
|===

=== For Configurations
* <<config>>



== Types
[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | Reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Count a| Number | How many reconnection attempts to make |  |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance is allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[AzureMessageAttributes]]
=== Azure Message Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Correlation Id a| String | Specifies a context for the message for correlation purposes  |  |
| Dead Letter Source a| String | Read-only property that indicates the entity in which the message was unable to be delivered |  |
| Delivery Count a| Number | Number of times message delivery was attempted. When a message lock expires, or when the message is abandoned by the receiver, delivery count increases.    |  |
| Enqueued Time Utc a| DateTime | The instant in UTC time when the message is accepted and stored in the entity  |  |
| Expires At a| DateTime | The instant in UTC time when the message is marked for removal and no longer able to be retrieved from the entity because of its expiration, which is controlled by *Time to Live*. |  |
| Label a| String | States the purpose of the message to the receiver |  |
| Lock Token a| String | Read-only property that references the lock that is in peek-lock receive mode  |  |
| Locked Until Utc a| DateTime | UTC instant until which the message is kept locked in the queue or subscription |  |
| Message Id a| String | Uniquely identifies the message and its payload |  |
| Partition Key a| String | Used for partitioned entities to enable related messages to be assigned to the same internal partition so that submission sequence order of the messages is recorded correctly   |  |
| Properties a| Object |  |  |
| Reply To a| String | Path for where the receiver of the message can reply  |  |
| Reply To Session Id a| String | Specify the specific session ID for where the application can receive messages  |  |
| Scheduled Enqueue Time Utc a| DateTime | Schedule the UTC time for when the message will appear in the queue  |  |
| Sequence Number a| Number | Unique 64-bit integer that is assigned to a message when the message is accepted and stored by the broker, and which functions as the message's true ID  |  |
| Session Id a| String | Specifies the session association of the message for session-aware entities  |  |
| Time To Live a| Any | Relative duration after which time the message expires, starting at the moment the message is accepted and stored by the broker, as defined in Enqueued Time UTC  |  |
| To a| String | Reserved for future use in routing scenarios and currently ignored by the broker. Can be used by applications in rule-driven, auto-forward chaining interactions to specify the intended logical destination of the message |  |
| Via Partition Key a| String | Selects the transfer queue partition when a message is sent through a transfer queue in the scope of a transaction  |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times a message can be redelivered and processed unsuccessfully before triggering a process-failed-message |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | Secure hashing algorithm to use. If not set, the default is SHA-256. | SHA-256 |
| Id Expression a| String | Defines one or more expressions to use to determine when a message is redelivered. This property can be set only if useSecureHash is false. |  |
| Object Store a| Object Store | Object store where the redelivery counter for each message is stored |  |
|===

[[AttributesWithoutLockToken]]
=== Attributes Without Lock Token

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Correlation Id a| String |Specifies a context for the message for correlation purposes  |  |
| Dead Letter Source a| String | Read-only property that indicates the entity in which the message was unable to be delivered |  |
| Delivery Count a| Number | Number of times message delivery was attempted. When a message lock expires, or when the message is abandoned by the receiver, delivery count increases. |  |
| Enqueued Time Utc a| DateTime | The instant in UTC time when the message is accepted and stored in the entity  |  |
| Expires At a| DateTime | The instant in UTC time when the message is marked for removal and no longer able to be retrieved from the entity because of its expiration, which is controlled by *Time to Live*.  |  |
| Label a| String | States the purpose of the message to the receiver |  |
| Locked Until Utc a| DateTime | UTC instant until which the message is kept locked in the queue or subscription |  |
| Message Id a| String | Uniquely identifies the message and its payload |  |
| Partition Key a| String | Used for partitioned entities to enable related messages to be assigned to the same internal partition so that submission sequence order of the messages is recorded correctly |  |
| Properties a| Object |  |  |
| Reply To a| String | Path for where the receiver of the message can reply  |  |
| Reply To Session Id a| String | Specify the specific session ID for where the application can receive messages  |  |
| Scheduled Enqueue Time Utc a| DateTime | Schedule the UTC time for when the message will appear in the queue  |  |
| Sequence Number a| Number | Unique 64-bit integer that is assigned to a message when the message is accepted and stored by the broker, and which functions as the message's true ID  |  |
| Session Id a| String | Specifies the session association of the message for session-aware entities |  |
| Time To Live a| Any | Relative duration after which time the message expires, starting at the moment the message is accepted and stored by the broker, as defined in Enqueued Time UTC  |  |
| To a| String | Reserved for future use in routing scenarios and currently ignored by the broker. Can be used by applications in rule-driven, auto-forward chaining interactions to specify the intended logical destination of the message |  |
| Via Partition Key a| String | Selects the transfer queue partition when a message is sent through a transfer queue in the scope of a transaction |  |
|===


== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:release-notes::connector/azure-service-bus-connector-release-notes-mule-4.adoc[Azure Service Bus Connector Release Notes]
* https://help.mulesoft.com[MuleSoft Help Center]
